--- a/jsk_pr2_robot/jsk_pr2_startup/jsk_pr2_move_base/local_costmap_params.yaml
+++ b/jsk_pr2_robot/jsk_pr2_startup/jsk_pr2_move_base/local_costmap_params.yaml
@@ -7,7 +7,7 @@ plugins:
 obstacles:
   observation_sources: base_scan_marking base_scan tilt_scan ground_object_cloud # people_substruct_cloud
   base_scan_marking: {sensor_frame: base_laser_link, topic: /base_scan_marking, data_type: PointCloud2, expected_update_rate: 0.2, observation_persistence: 0.1, marking: true, clearing: true, min_obstacle_height: 0.08, max_obstacle_height: 2.0 }
-  base_scan: {topic: /base_scan_filtered, data_type: LaserScan, sensor_frame: /base_laser_link, clearing: true, marking: false, expected_update_rate: 0.1 }
+  base_scan: {topic: /base_scan, data_type: LaserScan, sensor_frame: /base_laser_link, clearing: true, marking: false, expected_update_rate: 0.1 }
   tilt_scan: {sensor_frame: laser_tilt_link, topic: /tilt_scan, data_type: LaserScan, expected_update_rate: 0.2, observation_persistence: 0.2, marking: false, clearing: true, min_obstacle_height: -20.00, max_obstacle_height: 40.0 }
   ground_object_cloud: {sensor_frame: laser_tilt_link, topic: /ground_object_cloud_mux, data_type: PointCloud2, expected_update_rate: 0.2, observation_persistence: 0.7, marking: true, clearing: false, min_obstacle_height: -0.10, max_obstacle_height: 1.80}
 #  people_substruct_cloud: {sensor_frame: base_link, topic: /people_substruct_cloud, data_type: PointCloud2, expected_update_rate: 10, observation_persistence: 0.0, marking: false, clearing: true, min_obstacle_height: 0.08, max_obstacle_height: 2.0}
