--- a/jsk_baxter_robot/baxtereus/package.xml
+++ b/jsk_baxter_robot/baxtereus/package.xml
@@ -13,6 +13,8 @@
   <build_depend>collada_urdf</build_depend>
   <build_depend>euscollada</build_depend>
   <build_depend>rostest</build_depend>
+  <build_depend>roseus</build_depend>
+  <build_depend>pr2eus</build_depend>
   <!-- <build_depend>baxter_description</build_depend> -->
 
   <run_depend>collada_urdf</run_depend>
