--- a/jsk_pepper_robot/peppereus/package.xml
+++ b/jsk_pepper_robot/peppereus/package.xml
@@ -20,6 +20,7 @@
   <build_depend>pr2eus</build_depend> <!-- for robot interface -->
   <build_depend>pepper_description</build_depend>
   <build_depend>euscollada</build_depend>
+  <build_depend>rostest</build_depend>
 
   <run_depend>diagnostic_aggregator</run_depend>
   <run_depend>naoqi_driver</run_depend>
