--- a/jsk_naoqi_robot/peppereus/package.xml
+++ b/jsk_naoqi_robot/peppereus/package.xml
@@ -13,6 +13,7 @@
 
   <build_depend>diagnostic_aggregator</build_depend>
   <build_depend>naoqi_driver</build_depend>
+  <build_depend>nao_interaction_msgs</build_depend>
   <build_depend>pepper_bringup</build_depend>
   <build_depend>pr2eus</build_depend> <!-- for robot interface -->
   <build_depend>pepper_description</build_depend>
@@ -21,6 +22,7 @@
 
   <run_depend>diagnostic_aggregator</run_depend>
   <run_depend>naoqi_driver</run_depend>
+  <run_depend>nao_interaction_msgs</run_depend>
   <run_depend>pepper_bringup</run_depend>
   <run_depend>pr2eus</run_depend> <!-- for robot interface -->
   <run_depend>pepper_description</run_depend>
