--- a/jsk_fetch_robot/jsk_fetch_startup/package.xml
+++ b/jsk_fetch_robot/jsk_fetch_startup/package.xml
@@ -11,6 +11,7 @@
   <url>http://ros.org/wiki/jsk_fetch_startup</url>
   <buildtool_depend>catkin</buildtool_depend>
 
+  <run_depend>image_proc</run_depend>
   <run_depend>jsk_robot_startup</run_depend>
   <run_depend>jsk_maps</run_depend>
   <run_depend>fetch_navigation</run_depend>
