--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ cache:
   directories:
     - $HOME/.ccache
 sudo: required
+services:
+  - docker
 dist: trusty
 notifications:
   email:
@@ -15,31 +17,31 @@ env:
   global:
     - ROSWS=wstool
     - BUILDER=catkin
-    - USE_DOCKER=true
+    - USE_TRAVIS=true
     - ROS_PARALLEL_JOBS="-j2"
     - CATKIN_PARALLEL_JOBS="-p2"
     - ROS_PARALLEL_TEST_JOBS="-j1"
     - CATKIN_PARALLEL_TEST_JOBS="-p1"
     - NOT_TEST_INSTALL=true 
   matrix:
-    - ROS_DISTRO=hydro    USE_DEB=true
-    - ROS_DISTRO=hydro    USE_DEB=false EXTRA_DEB="ros-hydro-convex-decomposition ros-hydro-ivcon" BUILD_PKGS="jsk_pr2_calibration jsk_robot_startup pr2_base_trajectory_action jsk_pr2_startup jsk_pr2_desktop"
-    - ROS_DISTRO=indigo   USE_DEB=true
-    - ROS_DISTRO=indigo   USE_DEB=false EXTRA_DEB="ros-indigo-convex-decomposition ros-indigo-ivcon"
-    - ROS_DISTRO=jade     USE_DEB=true
-    - ROS_DISTRO=jade     USE_DEB=false EXTRA_DEB="ros-jade-convex-decomposition ros-jade-ivcon"
-    - ROS_DISTRO=kinetic  USE_DEB=true
-    - ROS_DISTRO=kinetic  USE_DEB=false EXTRA_DEB="ros-kinetic-convex-decomposition ros-kinetic-ivcon"
+    - ROS_DISTRO=hydro   USE_DEB=true
+    - ROS_DISTRO=hydro   USE_DEB=false EXTRA_DEB="ros-hydro-convex-decomposition ros-hydro-ivcon" BUILD_PKGS="jsk_pr2_calibration jsk_robot_startup pr2_base_trajectory_action jsk_pr2_startup jsk_pr2_desktop"
+    - ROS_DISTRO=indigo  USE_DEB=true
+    - ROS_DISTRO=indigo  USE_DEB=false EXTRA_DEB="ros-indigo-convex-decomposition ros-indigo-ivcon"
+    - ROS_DISTRO=jade    USE_DEB=true
+    - ROS_DISTRO=jade    USE_DEB=false EXTRA_DEB="ros-jade-convex-decomposition ros-jade-ivcon"
+    - ROS_DISTRO=kinetic USE_DEB=true
+    - ROS_DISTRO=kinetic USE_DEB=false EXTRA_DEB="ros-kinetic-convex-decomposition ros-kinetic-ivcon"
 matrix:
   fast_finish: true
   allow_failures:
-    - env: ROS_DISTRO=hydro    USE_DEB=true
-    - env: ROS_DISTRO=hydro    USE_DEB=false EXTRA_DEB="ros-hydro-convex-decomposition ros-hydro-ivcon" BUILD_PKGS="jsk_pr2_calibration jsk_robot_startup pr2_base_trajectory_action jsk_pr2_startup jsk_pr2_desktop"
-    - env: ROS_DISTRO=indigo   USE_DEB=false EXTRA_DEB="ros-indigo-convex-decomposition ros-indigo-ivcon"
-    - env: ROS_DISTRO=jade     USE_DEB=true
-    - env: ROS_DISTRO=jade     USE_DEB=false EXTRA_DEB="ros-jade-convex-decomposition ros-jade-ivcon"
-    - env: ROS_DISTRO=kinetic  USE_DEB=true
-    - env: ROS_DISTRO=kinetic  USE_DEB=false EXTRA_DEB="ros-kinetic-convex-decomposition ros-kinetic-ivcon"
+    - env: ROS_DISTRO=hydro   USE_DEB=true
+    - env: ROS_DISTRO=hydro   USE_DEB=false EXTRA_DEB="ros-hydro-convex-decomposition ros-hydro-ivcon" BUILD_PKGS="jsk_pr2_calibration jsk_robot_startup pr2_base_trajectory_action jsk_pr2_startup jsk_pr2_desktop"
+    - env: ROS_DISTRO=indigo  USE_DEB=false EXTRA_DEB="ros-indigo-convex-decomposition ros-indigo-ivcon"
+    - env: ROS_DISTRO=jade    USE_DEB=true
+    - env: ROS_DISTRO=jade    USE_DEB=false EXTRA_DEB="ros-jade-convex-decomposition ros-jade-ivcon"
+    - env: ROS_DISTRO=kinetic USE_DEB=true
+    - env: ROS_DISTRO=kinetic USE_DEB=false EXTRA_DEB="ros-kinetic-convex-decomposition ros-kinetic-ivcon"
 before_script:
   # to install pepper_meshes, nao_meshes, the licenses have to be accepted
   - if [ "$ROS_DISTRO" == "indigo" ]; then export BEFORE_SCRIPT="echo \"ros-indigo-pepper-meshes ros-pepper-meshes/accepted-ros-pepper-meshes boolean true\" | sudo debconf-set-selections; sudo apt-get install -y -qq ros-$ROS_DISTRO-pepper-meshes"; fi
