--- a/jsk_pr2_robot/jsk_pr2_desktop/CMakeLists.txt
+++ b/jsk_pr2_robot/jsk_pr2_desktop/CMakeLists.txt
@@ -22,8 +22,6 @@ endif()
 # scripts
 configure_file(${PROJECT_SOURCE_DIR}/pr2_jsk_startup.sh.in
   ${PROJECT_SCRIPTS_DIR}/pr2_jsk_startup.sh)
-configure_file(${PROJECT_SOURCE_DIR}/rviz.sh.in
-  ${PROJECT_SCRIPTS_DIR}/rviz.sh)
 configure_file(${PROJECT_SOURCE_DIR}/pr2_marker_control_main.sh.in
   ${PROJECT_SCRIPTS_DIR}/pr2_marker_control_main${PR2_NAME}.sh)
 configure_file(${PROJECT_SOURCE_DIR}/detect_cans_demo.sh.in
@@ -79,8 +77,6 @@ add_custom_target(desktop ALL DEPENDS
   ${PROJECT_SOURCE_DIR}/pr2_teleop_robot.sh.in
   ${PROJECT_SOURCE_DIR}/pr2_teleop_remote.sh.in
   )
-#set_directory_properties(PROPERTIES ADDITIONAL_MAKE_CLEAN_FILES
-#  "${SETUP_DIRECTORY}/PR2Dashboard.desktop;${SETUP_DIRECTORY}/PR2JSKStartup.desktop;${SETUP_DIRECTORY}/PR2MarkerControl.desktop;${SETUP_DIRECTORY}/StartPR2.desktop;${SETUP_DIRECTORY}/StopPR2.desktop;${PROJECT_SCRIPTS_DIR}/rviz.sh;${PROJECT_SCRIPTS_DIR}/pr2_jsk_startup.sh;${PROJECT_SCRIPTS_DIR}/pr2_marker_control_main.sh;${PROJECT_SCRIPTS_DIR}/detect_cans_demo.sh"
-#  )
-set(MAKE_CLEAN_FILES ${MAKE_CLEAN_FILES} "${PROJECT_SCRIPTS_DIR}/rviz.sh;${PROJECT_SCRIPTS_DIR}/pr2_jsk_startup.sh;${PROJECT_SCRIPTS_DIR}/pr2_marker_control_main.sh;${PROJECT_SCRIPTS_DIR}/detect_cans_demo.sh")
+
+set(MAKE_CLEAN_FILES ${MAKE_CLEAN_FILES} "${PROJECT_SCRIPTS_DIR}/pr2_jsk_startup.sh;${PROJECT_SCRIPTS_DIR}/pr2_marker_control_main.sh;${PROJECT_SCRIPTS_DIR}/detect_cans_demo.sh")
 set_directory_properties(PROPERTIES ADDITIONAL_MAKE_CLEAN_FILES "${MAKE_CLEAN_FILES}")
